tests/fixtures/invalid/pow_str_bool_none.py
# Cannot call pow() with Str, Bool, None
x = pow("hello", True, None)
